==============================================================
1.08 RC1              2016/08/19
==============================================================
- added drag&drop ordering of teams/relations (goffy)
- fixed bug: deleting relations when deleting team (goffy) 

==============================================================
1.07 RC3               2016/08/09
==============================================================
- fixed multiple defines of XOOPS_ICONS32_PATH/XOOPS_ICONS32_URL (goffy)

==============================================================
1.07 RC2               NOT RELEASED
==============================================================
- cosmetics (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- compatibility with parent functions (mamba)
- phpDocs fixes (mamba)
- '<br />'' to '<br>' (mamba)
- standardization on getInstance function (mamba)
- replace 'or' with '||' (mamba)
- added definition for _AM_WGTEAMS_MAX_FILESIZE (mamba)
- Missing semicolon (mamba)
- Redundant measure unit (mamba)

- fixed bug when using html code (goffy)

==============================================================
1.07                2016/03/16
==============================================================
- fixed bug in member_list.tpl (goffy)

==============================================================
1.06                2016/02/23
==============================================================
- added config 'showbreadcrumbs' (goffy)
- cosmeticts (mamba)

==============================================================
1.05                2016/01/31
==============================================================
- added config 'show labels' (goffy)

==============================================================
1.04                2016/01/31
==============================================================
- fixed bug with config wgteams_img_maxsize/wgteams_img_mimetypes (goffy)